--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-application.saveFrequency = 24
+application.saveFrequency = 0
+application.fwqSerializeFile = fwq
+application.userSerializeFile =
+application.firstLaunch = true
