--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-application.saveFrequency = 0
-application.fwqSerializeFile = fwq
-application.userSerializeFile =
-application.firstLaunch = true
+app.saveFrequency=24
+app.fwqSerializeFile=
+app.userSerializeFile=
+app.firstLaunch=true
+app.nbFileSaver=
+app.destFile =TestDestDirectory/
+app.srcFile =TestSourceDirectory/
+app.userName=
