--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-application.saveFrequency = 24
+app.freq=0
+app.fwqSerFile=SerFiles/
+app.userSerFile=SerFiles/
+app.firstLaunch=true
+app.userName=
+app.host=localhost
+app.port=8080
